docs: 📝 ユーザー登録APIスキーマ定義と既存エラースキーマの統一 #21
