# app/controllers/api/v1/release_notes_controller.rb
@@ -27,9 +27,15 @@ module Api
         return if params[:page].nil?
         return if is_pagination_params_valid
 
-        render_400(
+        render_error(
+          status: :bad_request,
           resource: 'ReleaseNote',
-          message: 'wrong type of page params ( given string, expected integer)'
+          errors: [
+            {
+              field: 'page',
+              message: 'pageは数字で入力してください。'
+            }
+          ]
         )
       end
     end
