# doc/openapi.yml
@@ -11,6 +11,8 @@ servers:
 tags:
   - name: ReleaseNote
     description: リリースノートに関するAPI
+  - name: Authentication
+    description: 認証に関するAPI
 components:
   securitySchemes: {}
   schemas:
@@ -79,85 +81,112 @@ components:
         - description
         - createdAt
       x-examples: {}
-  responses:
-    ReleaseNoteIndex:
-      description: リリースノート一覧
-      content:
-        application/json:
-          schema:
+    UnconfirmedUser:
+      title: UnconfirmedUser
+      x-stoplight:
+        id: d1ug2igiozwng
+      type: object
+      properties:
+        provider:
+          type: string
+          x-stoplight:
+            id: r4ae886pyb5a1
+        unconfirmed_email:
+          type: string
+          x-stoplight:
+            id: 7nlqudrkcs40i
+      required:
+        - provider
+        - unconfirmed_email
+    Error:
+      title: Error
+      x-stoplight:
+        id: yaeqhcu06c8j1
+      type: object
+      properties:
+        message:
+          type: string
+          x-stoplight:
+            id: y59gxc86odxqz
+        resource:
+          type: string
+          x-stoplight:
+            id: oedpyfp0krt6b
+        code:
+          type: integer
+          x-stoplight:
+            id: kh944euclth3n
+        errors:
+          type: array
+          x-stoplight:
+            id: exuao25m3o6ex
+          items:
+            x-stoplight:
+              id: urr0xqy1j3mdi
             type: object
             properties:
-              data:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ReleaseNote'
-              meta:
-                $ref: '#/components/schemas/Pagination'
+              field:
+                type: string
+                x-stoplight:
+                  id: 8yqmizf5lp9kk
+              message:
+                type: string
+                x-stoplight:
+                  id: mvq0kx7yf06h7
             required:
-              - data
-              - meta
-          examples:
-            Example 1:
-              value:
-                data:
-                  - id: fjh1-fu33-fk10-a85l
-                    version: 1.0.0
-                    title: New release
-                    description: 新機能がリリースされました
-                    createdAt: '2019-08-24T14:15:22Z'
-                meta:
-                  hasNext: true
-                  hasPrevious: true
-                  currentPage: 1
-                  totalPages: 10
-                  totalCount: 100
+              - field
+              - message
+      required:
+        - message
+        - resource
+        - code
+        - errors
+  responses:
     BadRequest:
       description: Bad Request
       content:
         application/json:
           schema:
-            type: object
-            properties:
-              message:
-                type: string
-                x-stoplight:
-                  id: 6d68gqhean4dp
-              code:
-                type: integer
-                x-stoplight:
-                  id: 1chfxtti2vigq
-              errors:
-                type: array
-                x-stoplight:
-                  id: n8qyf1s3cuwi2
-                items:
-                  x-stoplight:
-                    id: t3w1j886yxi9d
-                  type: object
-                  properties:
-                    resource:
-                      type: string
-                      x-stoplight:
-                        id: 9uv48ti1wmgu8
-                    message:
-                      type: string
-                      x-stoplight:
-                        id: eo85piucr3gh5
-                  required:
-                    - resource
-                    - message
-            required:
-              - message
-              - code
-              - errors
+            $ref: '#/components/schemas/Error'
           examples:
             Example 1:
               value:
                 message: Request failed
+                resource: User
                 code: 400
                 errors:
-                  - resource: User
-                    message: 'wrong number of arguments (given 0, expected 1)'
+                  - field: page
+                    message: pageは数字で入力してください。
+    UnprocessableEntity:
+      description: Unprocessable Entity
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+          examples:
+            Example 1:
+              value:
+                message: Validation failed
+                resource: User
+                code: 422
+                errors:
+                  - field: name
+                    message: ユーザー名の入力は必須です。
+    Conflict:
+      description: Conflict
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+          examples:
+            Example 1:
+              value:
+                message: Resource conflicted
+                resource: User
+                code: 409
+                errors:
+                  - field: email
+                    message: 既にメールアドレスが使用されています。
   examples: {}
   parameters:
     page:
@@ -175,7 +204,38 @@ paths:
         - ReleaseNote
       responses:
         '200':
-          $ref: '#/components/responses/ReleaseNoteIndex'
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    x-stoplight:
+                      id: rb1sb9jr5d19w
+                    items:
+                      $ref: '#/components/schemas/ReleaseNote'
+                  meta:
+                    $ref: '#/components/schemas/Pagination'
+                required:
+                  - data
+                  - meta
+              examples:
+                Example 1:
+                  value:
+                    data:
+                      - id: dk54-1222-fnd1-dk1a
+                        version: 1.0.1
+                        title: New Release
+                        description: 新機能がリリースされまｓｈちあ
+                        createdAt: '2019-08-24T14:15:22Z'
+                    meta:
+                      hasNext: true
+                      hasPrevious: true
+                      currentPage: 1
+                      totalPages: 10
+                      totalCount: 100
         '400':
           $ref: '#/components/responses/BadRequest'
       operationId: get-v1-release-notes
@@ -183,3 +243,62 @@ paths:
       parameters:
         - $ref: '#/components/parameters/page'
     parameters: []
+  /v1/auth:
+    post:
+      summary: ユーザー登録
+      operationId: post-v1-auth
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/UnconfirmedUser'
+                required:
+                  - data
+              examples:
+                Example 1:
+                  value:
+                    data:
+                      provider: email
+                      unconfirmed_email: hogehoge@gmail.com
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '409':
+          $ref: '#/components/responses/Conflict'
+        '422':
+          $ref: '#/components/responses/UnprocessableEntity'
+      description: 未認証状態のユーザーを登録する
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  x-stoplight:
+                    id: 5gnmpioukq5zs
+                password:
+                  type: string
+                  x-stoplight:
+                    id: g5yr3pzzba2at
+                password_confirmation:
+                  type: string
+                  x-stoplight:
+                    id: poi8c209kjif7
+              required:
+                - email
+                - password
+                - password_confirmation
+            examples:
+              Example 1:
+                value:
+                  email: hogehoge@fuga.com
+                  password: password
+                  password_confirmation: password
+      tags:
+        - Authentication
